setting rest path vars to 'rangeId' sins ng2 swagger generates package name if meets 'id' variable. e.g. DfaultApi.ts basePath setting
