# ng2spring-boot-seed/backend/src/main/java/com/github/soulaway/ng2spring/ControllerImpl.java
@@ -19,31 +19,31 @@ import io.swagger.annotations.ApiParam;
 public class ControllerImpl implements com.github.soulaway.myRestApi.api.RangeApi{
 	
 	private List <Range> rangesRep = new ArrayList<Range>();
-	
-    public ResponseEntity<Range> addRange(@ApiParam(value = "Range added",required=true ) @PathVariable("id") String id) {
+
+    public ResponseEntity<Range> addRange(@ApiParam(value = "Range added",required=true ) @PathVariable("rangeName") String rangeName) {
         Range r = new Range();
-        r.setName(id);
-        r.setId(new Long(rangesRep.size()));
+        r.setRangeName(rangeName);
+        r.setRangeId(new Long(rangesRep.size()));
         rangesRep.add(r);
         return ResponseEntity.ok(r);
     }
-    
-    public ResponseEntity<Void> deleteRange(@ApiParam(value = "ID of the range to delete",required=true ) @PathVariable("id") Long id) {
-    	Optional<Range> range = rangesRep.stream().filter(r -> r.getId().equals(id)).findFirst();
+
+    public ResponseEntity<Void> deleteRange(@ApiParam(value = "ID of the range to delete",required=true ) @PathVariable("rangeId") Long rangeId) {
+    	Optional<Range> range = rangesRep.stream().filter(r -> r.getRangeId().equals(rangeId)).findFirst();
     	if (range.isPresent()){
     		rangesRep.remove(range.get());
     		return ResponseEntity.ok().build();
     	} else {
-    		return ResponseEntity.unprocessableEntity().eTag(String.format("Entiity with Id %d was not found", id)).build();
+    		return ResponseEntity.unprocessableEntity().eTag(String.format("Entiity with Id %d was not found", rangeId)).build();
     	}
     }
 
-    public ResponseEntity<Range> findRangeById(@ApiParam(value = "ID of range to fetch",required=true ) @PathVariable("id") Long id) {
-    	Optional<Range> range = rangesRep.stream().filter(r -> r.getId().equals(id)).findFirst();
+    public ResponseEntity<Range> findRangeById(@ApiParam(value = "ID of range to fetch",required=true ) @PathVariable("rangeId") Long rangeId) {
+    	Optional<Range> range = rangesRep.stream().filter(r -> r.getRangeId().equals(rangeId)).findFirst();
     	if (range.isPresent()){
     		return ResponseEntity.ok(range.get());
     	} else {
-    		return ResponseEntity.unprocessableEntity().eTag(String.format("Entiity with Id %d was not found", id)).body(null);
+    		return ResponseEntity.unprocessableEntity().eTag(String.format("Entiity with Id %d was not found", rangeId)).body(null);
     	}
     }
 
@@ -51,3 +51,4 @@ public class ControllerImpl implements com.github.soulaway.myRestApi.api.RangeAp
         return ResponseEntity.ok(rangesRep);
     }
 }
+
